--- a/requirements.txt
+++ b/requirements.txt
@@ -48,7 +48,7 @@ pyparsing==2.4.7
 pyrsistent==0.17.3
 pyserial==3.4
 PySocks==1.7.1
-python-daemon==2.3.0
+python-daemon<2.0,>=1.5.2
 python-dateutil==2.8.1
 pytz==2022.7.1
 PyYAML==5.4.1
