--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,8 @@ jobs:
 
     - name: Deploy to AWS Elastic Beanstalk
       env:
-        AWS_ACCESS_KEY_ID: ASIAT2QCRKCWZD34PMRC
-        AWS_SECRET_ACCESS_KEY: d+MsH4IYxC366wts+y5Xu+urjaaSxFVZagBjMbsx
+        AWS_ACCESS_KEY_ID: ASIAT2QCRKCWXR5OMGMO
+        AWS_SECRET_ACCESS_KEY: jXh98yCTqoa+Vy3Xm8GUI9WTMrZXgMrdKs42NSAi
         AWS_REGION: us-east-1
       run: |
         pip install awsebcli
